--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "Jefferson Oliveira",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^7.6.0",
-    "delay-cli": "^2.0.0"
+    "concurrently": "^7.6.0"
   }
 }
