--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -2,7 +2,7 @@
   "applicationId": "js.neutralino.zero",
   "version": "1.0.0",
   "defaultMode": "window",
-  "documentRoot": "/view/build/",
+  "documentRoot": "/react/build/",
   "url": "/",
   "enableServer": true,
   "enableNativeAPI": true,
@@ -16,18 +16,18 @@
       "height": 500,
       "minWidth": 400,
       "minHeight": 200,
-      "icon": "/view/public/logo192.png"
+      "icon": "/react/public/logo192.png"
     }
   },
   "cli": {
     "binaryName": "ec-neutralino-react",
-    "resourcesPath": "/view/build/",
+    "resourcesPath": "/react/build/",
     "extensionsPath": "/extensions/",
-    "clientLibrary": "/view/public/neutralino.js",
+    "clientLibrary": "/react/public/neutralino.js",
     "binaryVersion": "4.9.0",
     "clientVersion": "3.8.0",
     "frontendLibrary": {
-      "patchFile": "/view/public/index.html",
+      "patchFile": "/react/public/index.html",
       "devUrl": "http://localhost:3000"
     }
   }
